...


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/slate_grey"
    android:id="@+id/page1"
    android:layout_centerInParent="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/appBarLayout2">
...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <TextView
            android:id="@+id/txtEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="Event:"
            android:textAlignment="textEnd"
            android:textColor="@color/light_gray"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtEvent"
            android:layout_alignBottom="@+id/txtEvent"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/txtEvent"
...
            android:inputType="textPersonName"
            android:maxLength="100"
            android:singleLine="true"
            android:textColor="@color/light_gray" />

        <TextView
            android:id="@+id/txtClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtEvent"
            android:layout_below="@+id/editTextName"
            android:layout_marginTop="14dp"
            android:text="Class:"
            android:textAlignment="textEnd"
            android:textColor="@color/light_gray"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextClass"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtClass"
            android:layout_alignBottom="@+id/txtClass"
            android:layout_alignStart="@+id/editTextName"
            android:ems="10"
...
            android:layout_marginTop="22dp"
            android:text="Date:"
            android:textColor="@color/light_gray"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinMonth"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtDate"
            android:layout_alignBottom="@+id/txtDate"
            android:layout_alignStart="@+id/editTextClass"
            android:background="@color/slate_grey"
            android:textColor="@color/light_gray"
            android:popupBackground="@color/slate_grey"
            android:entries="@array/month_array" />

        <Spinner
            android:id="@+id/spinDay"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinMonth"
            android:layout_alignBottom="@+id/spinMonth"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/spinMonth"
            android:background="@color/slate_grey"
            android:textColor="@color/light_gray"
            android:popupBackground="@color/slate_grey"
            android:entries="@array/day_array" />

        <Spinner
            android:id="@+id/spinYear"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/spinDay"
            android:layout_alignBottom="@+id/spinDay"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/spinDay"
...
        <EditText
            android:id="@+id/editTextStartMin"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editTextStartHr"
            android:layout_alignBottom="@+id/editTextStartHr"
            android:layout_alignEnd="@+id/txtMeetUpDesc"
            android:ems="10"
            android:inputType="number"
            android:maxLength="2"
            android:singleLine="true"
            android:text="30"
            android:textAlignment="center"
...
            android:layout_alignTop="@+id/spinEnd12Hr"
            android:text="End"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDescLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtTime"
            android:layout_below="@+id/editTextEndHr"
            android:layout_marginTop="31dp"
            android:text="Describe your location:"
            android:textColor="@color/light_gray"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextLocationDesc"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtDescLocation"
            android:layout_below="@+id/txtDescLocation"
            android:ems="10"
            android:inputType="textPersonName"
...
            android:id="@+id/txtMeetUpDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/editTextLocationDesc"
            android:layout_below="@+id/editTextLocationDesc"
            android:layout_marginTop="20dp"
            android:text="Describe Your Meet Up:"
            android:textColor="@color/light_gray"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtMeetUpDesc"
            android:layout_below="@+id/txtMeetUpDesc"
            android:ems="10"
            android:inputType="textPersonName"
...
