<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
   android:background="@color/slate_grey">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:weightSum="1">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/top_options_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_black_border_bottom">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/menu_bars"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="5dp"
                        android:src="@drawable/menu_icon" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_toEndOf="@+id/menu_bars"
                        android:paddingEnd="45dp"
                        android:src="@drawable/classbuddies" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>
        <!-- **************Home Toolbar************************* -->

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <RelativeLayout
                android:id="@+id/home_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="Home"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/home_icon" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="Profile"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/profile_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buddies_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="Buddies"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/buddies_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/classchat_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="ClassChat"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/classchat_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/meetup_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="Meet Up"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/meetup_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/search_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="Search"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/search_icon" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="Settings"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/settings_icon" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/signout_tab"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:paddingLeft="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="50dp"
                    android:text="Sign Out"
                    android:textSize="25sp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/signout_or_deleteaccount_icon" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>