...
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="day_array">
        <item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item><item>7</item><item>8</item><item>9</item><item>10</item>
        <item>11</item><item>12</item><item>13</item><item>14</item><item>15</item><item>16</item><item>17</item><item>18</item><item>19</item><item>20</item>
        <item>21</item><item>22</item><item>23</item><item>24</item><item>25</item><item>26</item><item>27</item><item>28</item><item>29</item><item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="hr12_array">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="year_array">
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <string-array name="names_array">
        <item>@string/aaron_cheung</item>
        <item>@string/charmaine_ching</item>
...
